--- a/.github/workflows/repo1.yml
+++ b/.github/workflows/repo1.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   test:
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     environment: testing
     runs-on: ubuntu-latest
     env:
