--- a/.github/workflows/repo1.yml
+++ b/.github/workflows/repo1.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           path: "build/*"
           destination: xyzbucket-incometax123
+          parent: false
 
         
 
